--- a/src/css/main.css
+++ b/src/css/main.css
@@ -777,15 +777,18 @@
 }
 .board .gallery-board .slick-slide{
     display: flex;
-    align-items: center;
     width: 100%;
     padding: 20px 0;
 }
 .board .gallery-board .thumb{
     margin-right: 40px;
-}
-.board .gallery-board .thumb img{
+    width: 202px;
+    height: 192px;
     border: 1px solid #ededed;
+    overflow: hidden;
+}
+.board .gallery-board .tit{
+    margin-top: 12px;
 }
 .board .gallery-board .tit a{
     display: block;
@@ -795,7 +798,6 @@
 }
 .board .gallery-board .tit p{
     position: relative;
-    min-height: 80px;
     padding-top: 20px;
     font-size: 16px;
     color: #777;
