sub 페이지 목록,상세

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -420,7 +420,7 @@
     color: #fff;
 }
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (max-width: 1280px) {
     .header .gnb {
         width: 500px;
         font-size: 18px;
