--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,6 +24,7 @@
     border-bottom: 1px solid rgba(255, 255, 255, .4);
     color: #fff;
     z-index: 100;
+    transition: .3s;
 }
 .header .logo {
     position: relative;
@@ -33,6 +34,12 @@
 }
 .header .logo a{
     display: block;
+    width: 100%;
+    height: 100%;
+}
+.header .logo span{
+    display: block;
+    position: relative;
     width: 100%;
     height: 100%;
 }
@@ -46,90 +53,11 @@
     top: 50%;
     transform: translate(-50%, -50%);
     transition: opacity 1s ease;
+    max-width: 100%;
 }
 .header .logo img:last-child{
     opacity: 0;
 }
-.header .gnb {
-    width: 715px;
-    height: 100%;
-    padding: 0 40px;
-    font-size: 20px;
-    font-weight: 700;
-}
-.header .gnb > ul {
-    display: flex;
-    justify-content: space-between;
-    height: 100%;
-}
-.header .gnb > ul > li{
-    display: flex;
-    align-items: center;
-    position: relative;
-    height: 100%;
-}
-.header .util {
-    display: flex;
-    height: 100%;
-}
-.header .util li {
-    height: 100%;
-}
-
-.header .util li a {
-    display: block;
-    height: 100%;
-    text-indent: -9999px;
-    overflow: hidden;
-}
-.header .call-link {
-    width: 249px;
-    background: #ff0000 url("../../assets/images/btn/btn-h-call.png");
-}
-.header .info-link {
-    width: 194px;
-    background: #0c417a url("../../assets/images/btn/btn-h-info.png");
-}
-
-/* header open style */
-.header::before {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 300px;
-    background: #fff;
-    content: "";
-    z-index: -1;
-    transition: .3s ease;
-}
-.header.open::before {
-    height: 300px;
-}
-.header .gnb::after{
-    display: block;
-    position: absolute;
-    top: 90px;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background: #ccc;
-    content: "";
-}
-.header .gnb .sub-depth {
-    display: block;
-    position: absolute;
-    top: 80px;
-    left: -20%;
-    width: 140%;
-    font-size: 16px;
-    line-height: 1.8;
-    text-align: center;
-    font-weight: 400;
-    color: #555;
-}
-
 /* header 고정 style */
 .header.fix {
     border: 0;
@@ -138,12 +66,15 @@
     -webkit-box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
-    transition: .3s;
 }
-.header.fix .logo .white{
+
+.header.fix .logo .white,
+.header.fix.active .logo .black {
     display: none;
 }
-.header.fix .logo .black{
+
+.header.fix .logo .black,
+.header.fix.active .logo .white {
     display: block;
 }
 
@@ -459,6 +390,9 @@
 }
 
 /* elements */
+.btn-menu {
+    display: none;
+}
 .btn-red{
     width: 100%;
     height: 54px;
@@ -468,12 +402,342 @@
     color: #fff;
 }
 
+/* pc */
+@media (min-width: 1025px){
+    .header .gnb {
+        width: 715px;
+        height: 100%;
+        padding-right: 40px;
+        font-size: 20px;
+        font-weight: 700;
+    }
+
+    .header .gnb>ul {
+        display: flex;
+        justify-content: space-between;
+        height: 100%;
+    }
+
+    .header .gnb>ul>li {
+        display: flex;
+        align-items: center;
+        position: relative;
+        height: 100%;
+    }
+    .header .gnb::before {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 0;
+        content: "";
+        z-index: -1;
+        transition: .3s ease;
+        background: #fff;
+    }
+    .header .gnb .sub-depth {
+        overflow: hidden;
+        display: block;
+        position: absolute;
+        top: 101px;
+        left: -20%;
+        width: 140%;
+        height: 0;
+        font-size: 16px;
+        line-height: 2;
+        text-align: center;
+        font-weight: 400;
+        color: #555;
+        opacity: 0;
+        transition: .3s ease .2s;
+    }
+    .header .gnb .fnb{
+        display: none;
+    }
+    .header .util {
+        display: flex;
+        height: 100%;
+    }
+
+    .header .util li {
+        height: 100%;
+    }
+
+    .header .util li a {
+        display: block;
+        height: 100%;
+        text-indent: -9999px;
+        overflow: hidden;
+    }
+
+    .header .call-link {
+        width: 249px;
+        background: #ff0000 url("../../assets/images/btn/btn-h-call.png");
+    }
+
+    .header .info-link {
+        width: 194px;
+        background: #0c417a url("../../assets/images/btn/btn-h-info.png");
+    }
+
+    /* header open style */
+    .header.open {
+        border: 0;
+        background: #fff;
+        color: #000;
+    }
+    .header.open .logo .white {
+        display: none;
+    }
+
+    .header.open .logo .black {
+        display: block;
+    }
+    .header.open .gnb::before {
+        height: 286px;
+        background: #fff;
+        -webkit-box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
+        -moz-box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
+    }
+
+    .header.open .gnb::after {
+        display: block;
+        position: absolute;
+        top: 90px;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background: #ccc;
+        content: "";
+    }
+    .header.open .gnb .sub-depth {
+        height: auto;
+        opacity: 1;
+    }
+    .header .gnb .sub-depth a:hover {
+        color: #3152a0;
+    }
+}
+
+/* 1280 이하 */
 @media (max-width: 1280px) {
+    .header .logo{
+        padding-right: 20px;
+    }
     .header .gnb {
         width: 500px;
+        padding-right: 20px;
         font-size: 18px;
     }
     .btn-consulting{
         right: -130px;
+    }
+    .header .gnb .sub-depth{
+        font-size: 14px;
+    }
+}
+
+/* 1024 이하 */
+@media (max-width: 1024px){
+    .header{
+        border: 0;   
+    }
+    /* .header.fix{
+        background: #fff;
+    } */
+    .btn-menu {
+        display: block;
+        position: absolute;
+        right: 15px;
+        top: 0;
+        bottom: 0;
+        width: 30px;
+        height: 25px;
+        margin: auto;
+        border: 0;
+        background: none;
+    }
+
+    .btn-menu::before,
+    .btn-menu::after,
+    .btn-menu span {
+        display: block;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: #042578;
+        content: "";
+        transition: .3s ease;
+    }
+
+    .btn-menu::before {
+        -webkit-animation: outT 0.8s backwards;
+        animation: outT 0.8s backwards;
+        -webkit-animation-direction: reverse;
+        animation-direction: reverse;
+    }
+
+    .btn-menu span {
+        overflow: hidden;
+        margin: 5px 0;
+        font-size: 1px;
+        text-indent: -999px;
+        -webkit-animation: outM 0.8s backwards;
+        animation: outM 0.8s backwards;
+        -webkit-animation-direction: reverse;
+        animation-direction: reverse;
+    }
+
+    .btn-menu::after {
+        -webkit-animation: outBtm 0.8s backwards;
+        animation: outBtm 0.8s backwards;
+        -webkit-animation-direction: reverse;
+        animation-direction: reverse;
+    }
+    .header.active .btn-menu::before,
+    .header.active .btn-menu::after,
+    .header.active .btn-menu span {
+        background-color: #fff;
+    }
+    .header.active .btn-menu::before {
+        -webkit-animation: inT 0.8s forwards;
+        animation: inT 0.8s forwards;
+    }
+    .header.active .btn-menu span {
+        -webkit-animation: inM 0.8s forwards;
+        animation: inM 0.8s forwards;
+    }
+    .header.active .btn-menu::after {
+        -webkit-animation: inBtm 0.8s forwards;
+        animation: inBtm 0.8s forwards;
+    }
+    .header .logo{
+        padding: 0 15px;
+    }
+    .header .gnb{
+        overflow: hidden;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        padding-top: 90px;
+        background: #f7f7f7;
+        font-size: 16px;
+        font-weight: 700;
+        color: #333;
+        z-index: -1;
+        transform: translateX(100%);
+        transition: .3s ease;
+    }
+    .header.active .gnb{
+        transform: translateX(0);
+    }
+    .header .gnb::before{
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 90px;
+        background: url("../../assets/images/bg/bg-mgnb.png") no-repeat center;
+        background-size: cover;
+        content: "";
+    }
+    .header .gnb-top > li{
+        background: #fff;
+    }
+    .header .gnb .sub-depth{
+        background: #f7f7f7;
+        font-weight: 500;
+    }
+    .header .gnb .fnb {
+        display: block;
+        font-size: 14px;
+        font-weight: 400;
+        color: #999;
+    }
+    .header .gnb .fnb li:first-child{
+        color: #555;
+    }
+    .header .util {
+        display: none;
+    }
+
+    
+}
+
+@keyframes inM {
+    50% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(45deg);
+    }
+}
+@keyframes outM {
+    50% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(45deg);
+    }
+}
+@keyframes inT {
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
+
+    50% {
+        transform: translateY(9px) rotate(0deg);
+    }
+
+    100% {
+        transform: translateY(9px) rotate(135deg);
+    }
+}
+@keyframes outT {
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
+
+    50% {
+        transform: translateY(9px) rotate(0deg);
+    }
+
+    100% {
+        transform: translateY(9px) rotate(135deg);
+    }
+}
+@keyframes inBtm {
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
+
+    50% {
+        transform: translateY(-9px) rotate(0deg);
+    }
+
+    100% {
+        transform: translateY(-9px) rotate(135deg);
+    }
+}
+@keyframes outBtm {
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
+
+    50% {
+        transform: translateY(-9px) rotate(0deg);
+    }
+
+    100% {
+        transform: translateY(-9px) rotate(135deg);
     }
 }
