--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -229,7 +229,11 @@ textarea[disabled] {
   clear: both;
 }
 .blind{
-  line-height: 0;
-  color: rgba(0, 0, 0, 0);
-  font-size: 1px;  
+  overflow: hidden;
+  border: 0;
+  margin: -1px;
+  width: 1px;
+  height: 1px;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
 }
