--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -522,7 +522,7 @@
 }
 
 /* 1280 이하 */
-@media (max-width: 1280px) {
+@media screen and (max-width: 1280px) {
     .header .logo{
         padding-right: 20px;
     }
@@ -540,7 +540,7 @@
 }
 
 /* 1024 이하 */
-@media (max-width: 1024px){
+@media screen and (max-width: 1024px){
     .header{
         border: 0;   
     }
