--- a/src/css/sub.css
+++ b/src/css/sub.css
@@ -16,7 +16,9 @@
 }
 .visual .visual-wrap{
     position: relative;
-    padding-top: 94px;
+    height: 329px;
+    padding-top: 92px;
+    box-sizing: border-box;
 }
 .visual h2{
     position: absolute;
@@ -34,17 +36,21 @@
 }
 .visual p{
     margin-bottom: 98px;
-    padding-top: 67px;
+    padding-top: 56px;
     -webkit-text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.39);
     -moz-text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.39);
     text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.39);
     font-size: 18px;
+    line-height: 1.72;
     text-align: center;
     transition: .5s ease;
     animation: scale-in 1s ease;
 }
 /* local nav */
 .lnb{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     background: rgba(0, 0, 0, .3);
 }
 .lnb .con-wrap{
@@ -192,6 +198,7 @@
     display: block;
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
 
 .tab-title input[type="radio"]:checked+label {
@@ -436,13 +443,69 @@
     color: #fff;
 }
 
-.th-row-table {}
+.th-row-table {
+    border-top: 1px solid #3255a3;
+    font-size: 16px;
+    line-height: 1.3;
+    color: #000;
+}
+.th-row-table th,
+.th-row-table td{
+    height: 56px;
+    padding: 6px 20px;
+    box-sizing: border-box;
+    border-bottom: 1px solid #e2e2e2;
+}
+.th-row-table th{
+    width: 200px;
+    background: #f7f7f7;
+    font-weight: 400;
+    text-align: left;
+}
+
+.th-col-table {
+    border-top: 1px solid #3255a3;
+    font-size: 16px;
+    line-height: 1.3;
+    color: #000;
+}
+.th-col-table th,
+.th-col-table td{
+    height: 56px;
+    padding: 6px 20px;
+    box-sizing: border-box;
+    border-right: 1px solid #e2e2e2;
+    border-bottom: 1px solid #e2e2e2;
+}
+.th-col-table th:last-child,
+.th-col-table td:last-child{
+    border-right: 0;
+}
+.th-col-table thead th{
+    background: #e7edf0;
+    font-weight: 400;
+}
+.th-col-table tbody th{
+    width: 200px;
+    background: #f7f7f7;
+    font-weight: 400;
+    text-align: left;
+}
+table{
+    word-break: keep-all;
+    word-wrap: break-word;
+}
+table .center{
+    text-align: center;
+}
 
 .tit-underline {
     display: inline-table;
     position: relative;
     font-size: 24px;
     font-weight: 700;
+    line-height: 1.25;
+    color: #000;
     text-align: left;
 }
 
@@ -455,12 +518,12 @@
     height: 16px;
     background: rgba(115, 178, 75, .2);
     content: "";
+    z-index: -1;
 }
 
 .txt-support {
     font-size: 14px;
     color: #d9a055;
-    text-align: right;
 }
 
 .btn-wrap{
@@ -483,6 +546,86 @@
     line-height: 55px;
     color: #fff;
     text-align: center;
+}
+
+.con-info{
+    position: relative;
+    font-size: 18px;
+    line-height: 1.938;
+    color: #555;
+}
+.con-info .tit-underline{
+    margin-bottom: 14px;
+}
+.con-info dd{
+    margin-bottom: 45px;
+}
+.con-info dd strong{
+    color: #000;
+}
+.con-info dd p{
+    margin-bottom: 20px;
+}
+.con-info .dot-txt-list li{
+    display: flex;
+}
+.con-info .dot-txt-list li::before{
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+    margin: 15px 10px 0 0;
+    border-radius: 100%;
+    background: #27499a;
+    content: "";
+}
+.con-info .dot-txt-list dl{
+    display: flex;
+    /* align-items: center; */
+}
+.con-info .dot-txt-list dt{
+    min-width: 100px;
+    font-weight: 700;
+    color: #000;
+}
+.con-info .dot-txt-list dd{
+    margin-bottom: 0;
+}
+.con-info .dot-txt-list dd li::before{
+    display: none;
+}
+.con-info table + .txt-support{
+    position: absolute;
+    right: 0;
+    margin-top: 9px;
+}
+.con-info .count-grid-list{
+    display: flex;
+    flex-wrap: wrap;
+    border-top: 1px solid #3255a3;
+    font-size: 16px;
+    counter-reset: num;
+}
+.con-info .count-grid-list li{
+    display: flex;
+    align-items: center;
+    width: 33.333%;
+    height: 56px;
+    padding: 0 20px;
+    border-right: 1px solid #e2e2e2;
+    border-bottom: 1px solid #e2e2e2;
+    box-sizing: border-box;
+}
+.con-info .count-grid-list li:nth-child(3n){
+    border-right: 0;
+}
+.con-info .count-grid-list li::before{
+    display: inline-block;
+    margin-right: 5px;
+    content: counter(num) ".";
+    counter-increment: num 1;
+}
+.con-info .count-grid-list li:last-child::before{
+    display: none;
 }
 
 /* animation */
@@ -538,6 +681,26 @@
     width: 290px;
 }
 
+/* 주요고객사 */
+.customer .visual {
+    background-image: url("../../assets/images/visual/customer-header.jpg");
+}
+.customer .company-list{
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    left: 5px;
+    max-width: 1110px;
+    margin: 0 auto;
+}
+.customer .company-list li{
+    border: 1px solid #ccc;
+    margin: 0 10px 10px 0;
+}
+.customer .company-list li img{
+    width: 100%;
+}
+
 /* 이용후기 */
 .review .visual {
     background-image: url("../../assets/images/visual/review-header.jpg");
@@ -579,4 +742,10 @@
 }
 .funeral .tab-con select{
     width: 223px;
+}
+
+@media screen and (max-width: 1280px){
+    .customer .company-list{
+        justify-content: center;
+    }
 }
